2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* strfns.cc (do_strcmp_fun, 
	strcmp_array_op, strcmp_str_op,
	strcmpi_array_op, strcmpi_str_op,
	strncmp_array_op, strncmp_str_op,
	strncmpi_array_op, strncmpi_str_op): New functions.
	(Fstrcmp, Fstrncmp): Reimplement using do_strcmp_fun.
	(Fstrcmpi, Fstrncmpi): New defuns.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/bsxfun.cc (maybe_fill_table): register relational
	handlers for char arrays.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (octave_class::numel (const octave_value_list&)): Don't
	attempt to query overloaded size.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* ov-fcn.h (octave_function (const std::string&, const std::string&)):
	Explicitly initialize all data members.

	* ov-builtin.h (octave_builtin::octave_builtin):
	Explicitly initialize base class object and data member.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__magick_read__.cc (read_indexed_images):
	No need to explicitly call chop_trailing_singletons now.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* oct-obj.cc (octave_value_list::any_cell): Avoid assignment in
	condition of if statement.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/lu.cc: Avoid test failures if HAVE_QRUPDATE_LUU is
	not defined.

2010-01-12  David Bateman  <dbateman@free.fr>

	* graphics.h.in (patch::properties): Add "flat" value to
	markeredgecolor and  markerfacecolor properties.

2010-01-12  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (builtin_type_t): New enum constants: btyp_cell,
	btyp_struct and btyp_func_handle.
	(btyp_isinteger, btyp_isfloat, btyp_isarray): New funcs.
	(btyp_class_name): New array.
	(get_builtin_classes): New func.
	* ov-cell.h (octave_cell::builtin_type): New virtual override.
	* ov-struct.h (octave_struct::builtin_type): New virtual override.
	* ov-fcn-handle.h (octave_fcn_handle::builtin_type): New virtual override.